<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="hello">Hello World, Table!</string>
    <string name="app_name">Table Organizer</string>
    <string name="consumables">Itens</string>
    <string name="persons">Pessoas</string>
    <string name="name">Nome</string>
    <string name="quantity">x</string>
    <string name="price">$</string>
    <string name="new_item">Novo Item</string>
    <string name="new_person">Nova Pessoa</string>
    <string name="ok">Aceitar</string>
    <string name="cancel">Cancelar</string>
    <string name="add">+</string>
    <string name="mine">Mostrar somente itens desta pessoa</string>
    <string name="duplicatePerson">Não é permitido nomes repetidos</string>
    <string name="personsConsuming">Mostrar somente consumidores deste item</string>
    <string name="currency">R$</string>
    <string name="add_item">Adicionar</string>
    <string name="clear">Limpar</string>
    <string name="tip">Gorjeta</string>
    <string name="help">Ajuda</string>
    <string name="consumableAddError">Erro ao adicionar item.</string>
    <string name="consumableDialogNameEmpty">O nome está vazio!</string>
    <string name="consumableDialogQuantityEmpty">Quantidade vazia!</string>
    <string name="consumableDialogPriceEmpty">Preço vazio!</string>
	<string name="personDialogNameEmpty">O nome está vazio!</string>
	<string name="confirmClearTable">Você deseja realmente limpar os dados do aplicativo?</string>
	<string name="tipDialogTitle">Escolha a Gorjeta</string>
	<string name="in_percentage">(em %)</string>
	<string name="confirmRemoveItem">Você deseja realmente remover este item?</string>
	<string name="confirmRemovePerson">Você deseja realmente remover esta pessoa?</string>
	<string name="total">Total</string>
</resources>
