<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <TextView android:text="@string/name"
    	android:id="@+id/person_name_label"
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"></TextView>
    <EditText android:id="@+id/person_name_input" 
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
    	android:maxLength="20">
    </EditText>
   	<Button android:id="@+id/add_item_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok" />
    <Button android:id="@+id/add_item_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />
</LinearLayout>
